--- a/src/components/Sidebar/style.module.scss
+++ b/src/components/Sidebar/style.module.scss
@@ -1,4 +1,5 @@
-$sidebar-width: 400px;
+$sidebar-width: 300px;
+$sidebar-option-size: calc($sidebar-width - 2 * $sidebar-width / 10);
 
 .sidebar {
   position: relative;
@@ -13,7 +14,9 @@ $sidebar-width: 400px;
   padding: calc($sidebar-width / 10);
 
   .option {
-    width: calc($sidebar-width - 2 * $sidebar-width / 10);
+    width: $sidebar-option-size;
+    height: $sidebar-option-size;
+    flex: none;
   }
 }
 
